Update 'backend-tests-go-qkovqcbn' component image to: quay.io/rhtap_qe/backend-tests-go-qkovqcbn:adc3136ff2ad2383ebf92606cece337849ea06df@sha256:fd91337b1024098f1b17eea064b4d654ea57d97e1b0879b7b59b5649448528ee

--- a/components/backend-tests-go-qkovqcbn/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-qkovqcbn/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-qkovqcbn
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-qkovqcbn:adc3136ff2ad2383ebf92606cece337849ea06df@sha256:fd91337b1024098f1b17eea064b4d654ea57d97e1b0879b7b59b5649448528ee
+          name: container-image
